minor update about stats

--- a/src/locale/locales.json
+++ b/src/locale/locales.json
@@ -509,14 +509,14 @@
 		"es-419": "carta"
 	},
 	"crab": {
-		"en": "Crab",
-		"es": "Cangrejo",
-		"es-419": "Cangrejo",
-		"fr": "Crabe",
-		"pt": "Caranguejo",
-		"cn": "钳甲蟹",
-		"kr": "크랩",
-		"de": "Krabbe"
+		"en": "Crab 🦀",
+		"es": "Cangrejo 🦀",
+		"es-419": "Cangrejo 🦀",
+		"fr": "Crabe 🦀",
+		"pt": "Caranguejo 🦀",
+		"cn": "钳甲蟹 🦀",
+		"kr": "크랩 🦀",
+		"de": "Krabbe 🦀"
 	},
 	"hunter": {
 		"en": "Hunter",
