--- a/README
+++ b/README
@@ -17,4 +17,4 @@ I may revisit and expand this project if the game it supports releases without a
 
 A big thank you to Uncapped Games 🦀 for the fantastic game!
 
-For those interested, feel free to check out my other projects on [itch.io](http://www.itch.io/eudaimyst).
+For those interested, feel free to check out my other projects on [itch.io](https://eudaimyst.itch.io).
